<resources>
    <string name="app_name" translatable="false">IHF - Herdeirinho</string>
    <string name="donation_pagseguro_url">https://pag.ae/bgk3C02</string>
    <string name="tab_main_title">Main</string>
    <string name="tab_apadrinhar_title">Patronize</string>
    <string name="tab_donation_title">Donate</string>
    <string name="tab_events_title">Events</string>
    <string name="description_main">To strengthen up the family. To rescue the citizens. To break the cycle of violence. To attend and help people.</string>
    <string name="description_events">Current events to be realized by the NGO</string>
    <string name="description_patronize">To become a patron, make contact with the NGO.\nInsert your information in the fields below.</string>
    <string name="description_donation"></string>
    <string name="description_donation_info"></string>
    <string name="description_item_donation">The NGO needs the following items: </string>
    <string name="action_send_email">Send e-mail...</string>

    <string name="button_watch_presentation_video">Watch the presentation video</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_phone">Telephone</string>
    <string name="hint_cel">Cell Phone</string>
    <string name="hint_company">Company</string>
    <string name="hint_website">Website</string>
    <string name="hint_message">Message</string>

    <string name="email_herdeirinhos" translatable="false">padrinho@herdeirosdofuturo.org.br</string>
    <string name="email_subject">The user %1$s wants to contact.</string>string>
    <string name="email_message_body" translatable="false">
        This message was generated by the application %1$s.\n
        \n
        The user %2$s wants to make contact.\n
        \n
        User Information:\n
        Name: %3$s\n
        E-mail: %4$s\n
        Phone: %5$s\n
        Cell Phone: %6$s\n
        Organization: %7$s\n
        Website: %8$s\n
        \n
        %9$s
    </string>

    <string name="donation_money">Money Donation</string>
    <string name="donation_item">Item Donation</string>
    <string name="button_event_list">Click to See the Events</string>
    <string name="event_details_activity_title">Event Details</string>
    <string name="event_description">Description: </string>
    <string name="event_date">Date: </string>
    <string name="event_name">Name: </string>
    <string name="event_local">Local: </string>

</resources>
