<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/default_margin" >

        <TextView
            android:id="@+id/labelDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/description_patronize"
            android:textSize="@dimen/default_descriptionFontSize"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:hint="@string/hint_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:hint="@string/hint_email"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/editPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:hint="@string/hint_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editCel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_smartphone_black_24dp"
            android:hint="@string/hint_cel"
            android:inputType="phone" />

        <EditText
            android:id="@+id/editCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_group_black_24dp"
            android:hint="@string/hint_company"
            android:inputType="text" />

        <EditText
            android:id="@+id/editWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_public_black_24dp"
            android:hint="@string/hint_website"
            android:inputType="text" />

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_message_black_24dp"
            android:hint="@string/hint_message"
            android:inputType="textMultiLine|textLongMessage" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:onClick="sendEmailTest"
        app:srcCompat="@drawable/ic_send_black_24dp" />

</android.support.design.widget.CoordinatorLayout>