<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/description_donation"
        android:textSize="@dimen/default_descriptionFontSize"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonDonationMoney"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_buttonPadding"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_attach_money_black_24dp"
        android:text="@string/donation_money"
        android:textColor="@color/colorButton"
        android:background="@drawable/button_background" />

    <Button
        android:id="@+id/buttonDonationItem"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/ic_giftbox"
        android:padding="@dimen/default_buttonPadding"
        android:textColor="@color/colorButton"
        android:text="@string/donation_item" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:onClick="onClickPagSeguro"
        app:srcCompat="@drawable/pagseguro_doar" />

</LinearLayout>