<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="vertical"
        android:padding="@dimen/default_margin"
        tools:context="br.com.fatecudos.herdeirinho.EventDetailsActivity">

        <TextView
            android:id="@+id/labelEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:textStyle="bold"
            android:text="@string/event_name"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/labelEventNameValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/labelEventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:text="@string/event_date"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/labelEventDateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/labelEventLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:text="@string/event_local"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/labelEventLocalValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/labelEventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:textStyle="bold"
            android:layout_columnWeight="0"
            android:layout_marginBottom="20dp"
            android:text="@string/event_description"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/labelEventDescriptionValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:textSize="20sp" />

    </GridLayout>
</ScrollView>


